// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> default should render a radio only without title, helptext/errortext 1`] = `
<div>
  <fieldset
    class="RadioGroup-samjza-0 epaokf"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hRPkye"
    >
      <label
        class="Viewweb__View-sc-1i53gcl-0 Labelweb__Label-sc-16p4kw7-0 egDawS Flexweb__Flex-h5ddrw-0 bXkbdN"
      >
        <input
          checked=""
          class="Inputweb__Input-sc-1q87j1i-0 fQnRnD"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-1i53gcl-0 Backdropweb__Backdrop-sc-44qipl-0 kLQOXX Sizeweb__Size-t4oux4-0 gFbSlU Flexweb__Flex-h5ddrw-0 iNMNUh"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 Circleweb__Circle-uzigg3-0 kupvqY Sizeweb__Size-t4oux4-0 idTfFo"
            color="rgba(43, 131, 234, 1.0 )"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Dotweb__Dot-sc-1h5nvml-0 dMQJCn Sizeweb__Size-t4oux4-0 fgPmik"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-dvo2dp-0 gRymcG Spaceweb__Space-sc-1gh69p2-0 bryIoN"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> defaultValue should render radio checked(attr) as true if defaultValue(prop) is provided 1`] = `
<div>
  <fieldset
    class="RadioGroup-samjza-0 epaokf"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hRPkye"
    >
      <label
        class="Viewweb__View-sc-1i53gcl-0 Labelweb__Label-sc-16p4kw7-0 egDawS Flexweb__Flex-h5ddrw-0 bXkbdN"
      >
        <input
          checked=""
          class="Inputweb__Input-sc-1q87j1i-0 fQnRnD"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-1i53gcl-0 Backdropweb__Backdrop-sc-44qipl-0 kLQOXX Sizeweb__Size-t4oux4-0 gFbSlU Flexweb__Flex-h5ddrw-0 iNMNUh"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 Circleweb__Circle-uzigg3-0 kupvqY Sizeweb__Size-t4oux4-0 idTfFo"
            color="rgba(43, 131, 234, 1.0 )"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Dotweb__Dot-sc-1h5nvml-0 dMQJCn Sizeweb__Size-t4oux4-0 fgPmik"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-dvo2dp-0 gRymcG Spaceweb__Space-sc-1gh69p2-0 bryIoN"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> defaultValue should render radio input with checked(attr) as false if defaultValue(prop) is not provided 1`] = `
<div>
  <fieldset
    class="RadioGroup-samjza-0 epaokf"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hRPkye"
    >
      <label
        class="Viewweb__View-sc-1i53gcl-0 Labelweb__Label-sc-16p4kw7-0 egDawS Flexweb__Flex-h5ddrw-0 bXkbdN"
      >
        <input
          class="Inputweb__Input-sc-1q87j1i-0 bcPyML"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-1i53gcl-0 Backdropweb__Backdrop-sc-44qipl-0 kLQOXX Sizeweb__Size-t4oux4-0 gFbSlU Flexweb__Flex-h5ddrw-0 iNMNUh"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 Circleweb__Circle-uzigg3-0 iwqArG Sizeweb__Size-t4oux4-0 idTfFo"
            color="rgba(22, 47, 86, 0.38)"
          />
        </div>
        <div
          class="Textweb__Text-dvo2dp-0 gRymcG Spaceweb__Space-sc-1gh69p2-0 bryIoN"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> disabled should render a disabled radio input if disabled is true 1`] = `
<div>
  <fieldset
    class="RadioGroup-samjza-0 epaokf"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hRPkye"
    >
      <label
        class="Viewweb__View-sc-1i53gcl-0 Labelweb__Label-sc-16p4kw7-0 gesveo Flexweb__Flex-h5ddrw-0 bXkbdN"
        disabled=""
      >
        <input
          checked=""
          class="Inputweb__Input-sc-1q87j1i-0 iUMiCc"
          data-testid="ds-radio-button"
          disabled=""
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-1i53gcl-0 Backdropweb__Backdrop-sc-44qipl-0 kLQOXX Sizeweb__Size-t4oux4-0 gFbSlU Flexweb__Flex-h5ddrw-0 iNMNUh"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 Circleweb__Circle-uzigg3-0 bMKSPQ Sizeweb__Size-t4oux4-0 idTfFo"
            color="rgba(22, 47, 86, 0.10)"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Dotweb__Dot-sc-1h5nvml-0 dyvcWX Sizeweb__Size-t4oux4-0 fgPmik"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-dvo2dp-0 fXDTpq Spaceweb__Space-sc-1gh69p2-0 bryIoN"
          color="shade.950"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> errorText should render radio with provided errorText 1`] = `
<div>
  <fieldset
    class="RadioGroup-samjza-0 epaokf"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hRPkye"
    >
      <label
        class="Viewweb__View-sc-1i53gcl-0 Labelweb__Label-sc-16p4kw7-0 egDawS Flexweb__Flex-h5ddrw-0 bXkbdN"
      >
        <input
          checked=""
          class="Inputweb__Input-sc-1q87j1i-0 fQnRnD"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-1i53gcl-0 Backdropweb__Backdrop-sc-44qipl-0 kLQOXX Sizeweb__Size-t4oux4-0 gFbSlU Flexweb__Flex-h5ddrw-0 iNMNUh"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 Circleweb__Circle-uzigg3-0 kupvqY Sizeweb__Size-t4oux4-0 idTfFo"
            color="rgba(43, 131, 234, 1.0 )"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Dotweb__Dot-sc-1h5nvml-0 dMQJCn Sizeweb__Size-t4oux4-0 fgPmik"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-dvo2dp-0 gRymcG Spaceweb__Space-sc-1gh69p2-0 bryIoN"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
      <div
        class="Textweb__Text-dvo2dp-0 jlzvmT Spaceweb__Space-sc-1gh69p2-0 giAGWf"
        color="negative.900"
        data-testid="ds-text"
      >
        This is some sample error text.
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> focus with defaultValue(uncontrolled) should render focus styles on radio when radio is checked 1`] = `
<div>
  <fieldset
    class="RadioGroup-samjza-0 epaokf"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hRPkye"
    >
      <label
        class="Viewweb__View-sc-1i53gcl-0 Labelweb__Label-sc-16p4kw7-0 egDawS Flexweb__Flex-h5ddrw-0 bXkbdN"
      >
        <input
          checked=""
          class="Inputweb__Input-sc-1q87j1i-0 fQnRnD"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-1i53gcl-0 Backdropweb__Backdrop-sc-44qipl-0 kLQOXX Sizeweb__Size-t4oux4-0 gFbSlU Flexweb__Flex-h5ddrw-0 iNMNUh"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 Circleweb__Circle-uzigg3-0 kupvqY Sizeweb__Size-t4oux4-0 idTfFo"
            color="rgba(43, 131, 234, 1.0 )"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Dotweb__Dot-sc-1h5nvml-0 dMQJCn Sizeweb__Size-t4oux4-0 fgPmik"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-dvo2dp-0 gRymcG Spaceweb__Space-sc-1gh69p2-0 bryIoN"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> focus with defaultValue(uncontrolled) should render focus styles on radio when radio is not checked 1`] = `
<div>
  <fieldset
    class="RadioGroup-samjza-0 epaokf"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hRPkye"
    >
      <label
        class="Viewweb__View-sc-1i53gcl-0 Labelweb__Label-sc-16p4kw7-0 egDawS Flexweb__Flex-h5ddrw-0 bXkbdN"
      >
        <input
          class="Inputweb__Input-sc-1q87j1i-0 bcPyML"
          data-testid="ds-radio-button"
          type="radio"
          value="2"
        />
        <div
          class="Viewweb__View-sc-1i53gcl-0 Backdropweb__Backdrop-sc-44qipl-0 kLQOXX Sizeweb__Size-t4oux4-0 gFbSlU Flexweb__Flex-h5ddrw-0 iNMNUh"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 Circleweb__Circle-uzigg3-0 iwqArG Sizeweb__Size-t4oux4-0 idTfFo"
            color="rgba(22, 47, 86, 0.38)"
          />
        </div>
        <div
          class="Textweb__Text-dvo2dp-0 gRymcG Spaceweb__Space-sc-1gh69p2-0 bryIoN"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> focus with value(controlled) should render focus styles on radio when radio is checked 1`] = `
<div>
  <fieldset
    class="RadioGroup-samjza-0 epaokf"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hRPkye"
    >
      <label
        class="Viewweb__View-sc-1i53gcl-0 Labelweb__Label-sc-16p4kw7-0 egDawS Flexweb__Flex-h5ddrw-0 bXkbdN"
      >
        <input
          checked=""
          class="Inputweb__Input-sc-1q87j1i-0 fQnRnD"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-1i53gcl-0 Backdropweb__Backdrop-sc-44qipl-0 kLQOXX Sizeweb__Size-t4oux4-0 gFbSlU Flexweb__Flex-h5ddrw-0 iNMNUh"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 Circleweb__Circle-uzigg3-0 kupvqY Sizeweb__Size-t4oux4-0 idTfFo"
            color="rgba(43, 131, 234, 1.0 )"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Dotweb__Dot-sc-1h5nvml-0 dMQJCn Sizeweb__Size-t4oux4-0 fgPmik"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-dvo2dp-0 gRymcG Spaceweb__Space-sc-1gh69p2-0 bryIoN"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> focus with value(controlled) should render focus styles on radio when radio is not checked 1`] = `
<div>
  <fieldset
    class="RadioGroup-samjza-0 epaokf"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hRPkye"
    >
      <label
        class="Viewweb__View-sc-1i53gcl-0 Labelweb__Label-sc-16p4kw7-0 egDawS Flexweb__Flex-h5ddrw-0 bXkbdN"
      >
        <input
          class="Inputweb__Input-sc-1q87j1i-0 bcPyML"
          data-testid="ds-radio-button"
          type="radio"
          value="2"
        />
        <div
          class="Viewweb__View-sc-1i53gcl-0 Backdropweb__Backdrop-sc-44qipl-0 kLQOXX Sizeweb__Size-t4oux4-0 gFbSlU Flexweb__Flex-h5ddrw-0 iNMNUh"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 Circleweb__Circle-uzigg3-0 iwqArG Sizeweb__Size-t4oux4-0 idTfFo"
            color="rgba(22, 47, 86, 0.38)"
          />
        </div>
        <div
          class="Textweb__Text-dvo2dp-0 gRymcG Spaceweb__Space-sc-1gh69p2-0 bryIoN"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> helpText should render radio with provided helpText 1`] = `
<div>
  <fieldset
    class="RadioGroup-samjza-0 epaokf"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hRPkye"
    >
      <label
        class="Viewweb__View-sc-1i53gcl-0 Labelweb__Label-sc-16p4kw7-0 egDawS Flexweb__Flex-h5ddrw-0 bXkbdN"
      >
        <input
          checked=""
          class="Inputweb__Input-sc-1q87j1i-0 fQnRnD"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-1i53gcl-0 Backdropweb__Backdrop-sc-44qipl-0 kLQOXX Sizeweb__Size-t4oux4-0 gFbSlU Flexweb__Flex-h5ddrw-0 iNMNUh"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 Circleweb__Circle-uzigg3-0 kupvqY Sizeweb__Size-t4oux4-0 idTfFo"
            color="rgba(43, 131, 234, 1.0 )"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Dotweb__Dot-sc-1h5nvml-0 dMQJCn Sizeweb__Size-t4oux4-0 fgPmik"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-dvo2dp-0 gRymcG Spaceweb__Space-sc-1gh69p2-0 bryIoN"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
      <div
        class="Textweb__Text-dvo2dp-0 cqcyer Spaceweb__Space-sc-1gh69p2-0 giAGWf"
        color="shade.950"
        data-testid="ds-text"
      >
        This is some sample help text.
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> size should render a large radio input 1`] = `
<div>
  <fieldset
    class="RadioGroup-samjza-0 epaokf"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hRPkye"
    >
      <label
        class="Viewweb__View-sc-1i53gcl-0 Labelweb__Label-sc-16p4kw7-0 egDawS Flexweb__Flex-h5ddrw-0 bXkbdN"
      >
        <input
          checked=""
          class="Inputweb__Input-sc-1q87j1i-0 fQnRnD"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-1i53gcl-0 Backdropweb__Backdrop-sc-44qipl-0 kLQOXX Sizeweb__Size-t4oux4-0 leRtoI Flexweb__Flex-h5ddrw-0 iNMNUh"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 Circleweb__Circle-uzigg3-0 evVIbW Sizeweb__Size-t4oux4-0 PtTUc"
            color="rgba(43, 131, 234, 1.0 )"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Dotweb__Dot-sc-1h5nvml-0 dMQJCn Sizeweb__Size-t4oux4-0 gOntRE"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-dvo2dp-0 kgLoKE Spaceweb__Space-sc-1gh69p2-0 bryIoN"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> size should render a medium radio input 1`] = `
<div>
  <fieldset
    class="RadioGroup-samjza-0 epaokf"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hRPkye"
    >
      <label
        class="Viewweb__View-sc-1i53gcl-0 Labelweb__Label-sc-16p4kw7-0 egDawS Flexweb__Flex-h5ddrw-0 bXkbdN"
      >
        <input
          checked=""
          class="Inputweb__Input-sc-1q87j1i-0 fQnRnD"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-1i53gcl-0 Backdropweb__Backdrop-sc-44qipl-0 kLQOXX Sizeweb__Size-t4oux4-0 gFbSlU Flexweb__Flex-h5ddrw-0 iNMNUh"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 Circleweb__Circle-uzigg3-0 kupvqY Sizeweb__Size-t4oux4-0 idTfFo"
            color="rgba(43, 131, 234, 1.0 )"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Dotweb__Dot-sc-1h5nvml-0 dMQJCn Sizeweb__Size-t4oux4-0 fgPmik"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-dvo2dp-0 gRymcG Spaceweb__Space-sc-1gh69p2-0 bryIoN"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> size should render a small radio input 1`] = `
<div>
  <fieldset
    class="RadioGroup-samjza-0 epaokf"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hRPkye"
    >
      <label
        class="Viewweb__View-sc-1i53gcl-0 Labelweb__Label-sc-16p4kw7-0 egDawS Flexweb__Flex-h5ddrw-0 bXkbdN"
      >
        <input
          checked=""
          class="Inputweb__Input-sc-1q87j1i-0 fQnRnD"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-1i53gcl-0 Backdropweb__Backdrop-sc-44qipl-0 kLQOXX Sizeweb__Size-t4oux4-0 ckuxho Flexweb__Flex-h5ddrw-0 iNMNUh"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 Circleweb__Circle-uzigg3-0 iyjMzQ Sizeweb__Size-t4oux4-0 hKiios"
            color="rgba(43, 131, 234, 1.0 )"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Dotweb__Dot-sc-1h5nvml-0 dMQJCn Sizeweb__Size-t4oux4-0 UcnuQ"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-dvo2dp-0 gDlqwS Spaceweb__Space-sc-1gh69p2-0 bryIoN"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> title should render radio with provided title 1`] = `
<div>
  <fieldset
    class="RadioGroup-samjza-0 epaokf"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hRPkye"
    >
      <label
        class="Viewweb__View-sc-1i53gcl-0 Labelweb__Label-sc-16p4kw7-0 egDawS Flexweb__Flex-h5ddrw-0 bXkbdN"
      >
        <input
          checked=""
          class="Inputweb__Input-sc-1q87j1i-0 fQnRnD"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-1i53gcl-0 Backdropweb__Backdrop-sc-44qipl-0 kLQOXX Sizeweb__Size-t4oux4-0 gFbSlU Flexweb__Flex-h5ddrw-0 iNMNUh"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 Circleweb__Circle-uzigg3-0 kupvqY Sizeweb__Size-t4oux4-0 idTfFo"
            color="rgba(43, 131, 234, 1.0 )"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Dotweb__Dot-sc-1h5nvml-0 dMQJCn Sizeweb__Size-t4oux4-0 fgPmik"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-dvo2dp-0 gRymcG Spaceweb__Space-sc-1gh69p2-0 bryIoN"
          color="shade.980"
          data-testid="ds-text"
        >
          Radio Button
        </div>
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> value should render radio input checked(attr) as true if value(prop) is provided 1`] = `
<div>
  <fieldset
    class="RadioGroup-samjza-0 epaokf"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hRPkye"
    >
      <label
        class="Viewweb__View-sc-1i53gcl-0 Labelweb__Label-sc-16p4kw7-0 gesveo Flexweb__Flex-h5ddrw-0 bXkbdN"
        disabled=""
      >
        <input
          checked=""
          class="Inputweb__Input-sc-1q87j1i-0 iUMiCc"
          data-testid="ds-radio-button"
          disabled=""
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-1i53gcl-0 Backdropweb__Backdrop-sc-44qipl-0 kLQOXX Sizeweb__Size-t4oux4-0 gFbSlU Flexweb__Flex-h5ddrw-0 iNMNUh"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 Circleweb__Circle-uzigg3-0 bMKSPQ Sizeweb__Size-t4oux4-0 idTfFo"
            color="rgba(22, 47, 86, 0.10)"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Dotweb__Dot-sc-1h5nvml-0 dyvcWX Sizeweb__Size-t4oux4-0 fgPmik"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-dvo2dp-0 fXDTpq Spaceweb__Space-sc-1gh69p2-0 bryIoN"
          color="shade.950"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> value should render radio input with checked(attr) as false if value(prop) is not provided 1`] = `
<div>
  <fieldset
    class="RadioGroup-samjza-0 epaokf"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hRPkye"
    >
      <label
        class="Viewweb__View-sc-1i53gcl-0 Labelweb__Label-sc-16p4kw7-0 gesveo Flexweb__Flex-h5ddrw-0 bXkbdN"
        disabled=""
      >
        <input
          class="Inputweb__Input-sc-1q87j1i-0 iUMiCc"
          data-testid="ds-radio-button"
          disabled=""
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-1i53gcl-0 Backdropweb__Backdrop-sc-44qipl-0 kLQOXX Sizeweb__Size-t4oux4-0 gFbSlU Flexweb__Flex-h5ddrw-0 iNMNUh"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 Circleweb__Circle-uzigg3-0 bMKSPQ Sizeweb__Size-t4oux4-0 idTfFo"
            color="rgba(22, 47, 86, 0.10)"
          />
        </div>
        <div
          class="Textweb__Text-dvo2dp-0 fXDTpq Spaceweb__Space-sc-1gh69p2-0 bryIoN"
          color="shade.950"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> variantColor should render a radio with default variantColor if variantColor not provided 1`] = `
<div>
  <fieldset
    class="RadioGroup-samjza-0 epaokf"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hRPkye"
    >
      <label
        class="Viewweb__View-sc-1i53gcl-0 Labelweb__Label-sc-16p4kw7-0 egDawS Flexweb__Flex-h5ddrw-0 bXkbdN"
      >
        <input
          checked=""
          class="Inputweb__Input-sc-1q87j1i-0 fQnRnD"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-1i53gcl-0 Backdropweb__Backdrop-sc-44qipl-0 kLQOXX Sizeweb__Size-t4oux4-0 gFbSlU Flexweb__Flex-h5ddrw-0 iNMNUh"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 Circleweb__Circle-uzigg3-0 kupvqY Sizeweb__Size-t4oux4-0 idTfFo"
            color="rgba(43, 131, 234, 1.0 )"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Dotweb__Dot-sc-1h5nvml-0 dMQJCn Sizeweb__Size-t4oux4-0 fgPmik"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-dvo2dp-0 gRymcG Spaceweb__Space-sc-1gh69p2-0 bryIoN"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> variantColor should render a radio with provided variantColor 1`] = `
<div>
  <fieldset
    class="RadioGroup-samjza-0 epaokf"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hRPkye"
    >
      <label
        class="Viewweb__View-sc-1i53gcl-0 Labelweb__Label-sc-16p4kw7-0 egDawS Flexweb__Flex-h5ddrw-0 bXkbdN"
      >
        <input
          checked=""
          class="Inputweb__Input-sc-1q87j1i-0 fsZOaE"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-1i53gcl-0 Backdropweb__Backdrop-sc-44qipl-0 kLQOXX Sizeweb__Size-t4oux4-0 gFbSlU Flexweb__Flex-h5ddrw-0 iNMNUh"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 Circleweb__Circle-uzigg3-0 fZyHzA Sizeweb__Size-t4oux4-0 idTfFo"
            color="rgba(52, 74, 108, 1.0)"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Dotweb__Dot-sc-1h5nvml-0 gvflCX Sizeweb__Size-t4oux4-0 fgPmik"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-dvo2dp-0 gRymcG Spaceweb__Space-sc-1gh69p2-0 bryIoN"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;
